# graphisoft_competition_2017

./: .gitignore  .gitmodules  README.md  check.sh
src/: .gitignore  CMakeLists.txt  Tuprules.tup  archive.tup
src/egybevag/: Tupfile  cube.in  generator.cpp  main.cpp  notsimple.in  rotationmatrices.cpp  rotmat.cpp  simple.in  simple_offseted.in  simple_rotated.in  simple_unordered.in  wall_with_hole.in
src/genetic_test/: Tupfile  main.cpp
src/iskolabusz/: Tupfile  a1.cpp  a10.cpp  a2.cpp  a3.cpp  a4.cpp  a5.cpp  a6.cpp  a7.cpp  a8.cpp  chars.sh  cr.sh  main.cpp  program.cpp  test.sh
src/iskolabusz/ubuntu/: Dockerfile
src/labirinth/: 1000x500_1.in  1000x500_2.in  200x100_1.in  20x10_1.in  Field.hpp  Tupfile  edge.in  err2.in  generator.cpp  main.cpp  print.cpp  trivial.in
src/lake/: .gitignore  Error.hpp  Lake.hpp  Neural.hpp  Tupfile  abnormal.in  backwards_ferry.in  c10000_f10000_1.in  c10000_f10000_2.in  c1000_f10000_duplicate.in  c1000_f2000_1.in  c1000_f2000_2.in  c1000_f2000_3.in  c1000_f2000_short.in  c1000_f2000_short2.in  c1000_f5000_1.in  c1000_f5000_2.in  c1000_f5000_full_bike_path.in  c100_f200_1.in  c100_f500_duplicate.in  c100_f500_duplicate2.in  c10_f10_1.in  c10_f10_2.in  c2000_f5000_short.in  c20_f20_1.in  c500_f10000_abnormal.in  c50_f2000_1.in  c50_f500_1.in  c50_f500_2.in  c50_f500_abnormal.in  ferry_to_0.in  generate.sh  generator.cpp  learn.cpp  loop.in  loop_at_origin.in  main.cpp  makezip.sh  network-prepare.cpp  neural-boost.cpp  (+1 more)
src/lake/ais/: .gitignore  fifth.ai  first.ai  fourth.ai  second.ai  third.ai  third_szeti.ai
src/semifinal/: CMakeLists.txt  Tuprules.tup  box_demo.txt  choosers.txt
src/semifinal/ais/: first.ai  fourth.ai  second.ai  third.ai
src/semifinal/client/: AssemblingChooser.hpp  BestChooser.hpp  CMakeLists.txt  ChooserHelper.hpp  ChoosingStrategy.cpp  ChoosingStrategy.hpp  DelegatingChooser.hpp  DistanceChooser.cpp  DistanceChooser.hpp  GenericSolver.hpp  HeuristicSolver.hpp  IChooser.hpp  LookaheadChooser.cpp  LookaheadChooser.hpp  MMMChooser.cpp  MMMChooser.hpp  MaxReachableChooser.cpp  MaxReachableChooser.hpp  MonitorDefendingChooser.cpp  MonitorDefendingChooser.hpp  NeuralChooserFactory.hpp  OpponentPushCheckingChooser.cpp  OpponentPushCheckingChooser.hpp  OpponentsInfo.hpp  PotentialStep.cpp  (+10 more)
src/semifinal/neural_client/: CMakeLists.txt  NeuralChooserFactory.hpp  Tupfile  learner.cpp  main.cpp
src/semifinal/serverless/: CMakeLists.txt  Game.cpp  Game.hpp  Options.cpp  Options.hpp  Random.hpp  Tupfile  main.cpp  main.cpp.s
src/semifinal/strategy_client/: CMakeLists.txt  Tupfile  main.cpp
src/tools/: CMakeLists.txt
(+58 files in other folders)
