project(Serverless)
file (GLOB sources "*.cpp")
include_directories(${Matrix_SOURCE_DIR})
include_directories(${Track_SOURCE_DIR})
include_directories(${Client_SOURCE_DIR})
include_directories(${Game_SOURCE_DIR})
add_executable(serverless ${sources})
target_link_libraries(serverless client game)
target_link_libraries(serverless ${Boost_LIBRARIES})
